2023-01-25  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/wpg.c: Format "8BIMTEXT" cannot be embedded inside WPG.

2023-01-24  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat Add missing tests of fileformats.

2023-01-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* tests/rwblob.tap: Add sanity test for WPG format.

	* tests/rwfile.tap: Add sanity test for WPG format.

	* coders/wpg.c: Change line terminations back to ISO standard
	format.
	(RegisterWPGImage): WPG currently only supports one frame.

	* Makefile.am: No longer produce ".sig" files since the ".asc"
	files can do everything that the ".sig" files can do.

2023-01-15  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat
	* coders/wpg.c Added WPG writer ... cross your fingers.

2023-01-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* PerlMagick/MANIFEST: Update PerlMagick manifest.

	* version.sh: Updated for 1.3.40 release.

	* NEWS.txt: Updated the news.

2023-01-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jxl.c (ReadJXLImage): Cache and trace extra channel info.

2023-01-11  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/wpg.c Fixed Monochromatic bilevel WPG should answer to
	gm identify file.wpg ..... PseudoClass 2c 8-bit

2023-01-08  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/wpg.c Fixed deffect in WPG header reading.

2023-01-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Use lower-case raw profile
	identifiers (e.g. 'Raw profile type xmp') because exiftool expects
	that.  Partially addresses concerns raised by SourceForge bug #682
	"Invalid storage of XMP in PNGs".

	* www/INSTALL-unix.rst: Add notes about required libjxl versions.

	* README.txt: Add notes about required libjxl versions.

2023-01-08 Fojtik Jaroslav  <JaFojtik@yandex.com>

	* VisualMagick/tests/runtest.bat Added new tests for WEBP, BMP2 & BMP3.
	These tests are passing.
