@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020230125"
-#define public MagickPackageReleaseDate "snapshot-20230125"
+#define public MagickPackageVersionAddendum ".020230128"
+#define public MagickPackageReleaseDate "snapshot-20230128"
