@@ -1959,7 +1959,8 @@ static MagickPassFail WriteWPGImage(const ImageInfo *image_info, Image *image)
 
   (void)TransformColorspace(image,RGBColorspace);
 
-  if(image->colors<=0 || image->colors>256)
+  if ((image->storage_class == DirectClass) ||
+     ((image->storage_class == PseudoClass) && (image->colors<=0 || image->colors>256)))
   {
     GetQuantizeInfo(&quantize_info);
     quantize_info.dither = image_info->dither;
